--- a/src/Tablero/Tablero.css
+++ b/src/Tablero/Tablero.css
@@ -1,8 +1,15 @@
 .tablero{
     display: flex;
     flex-wrap:wrap;
-    width: 700px;
-    height: 600px;
+    width: 800px;
+    height: 450px;
     margin: 0 auto;
-    justify-content: space-around;
+}
+
+@media  only screen and (max-width: 700px) {
+.tablero{
+width: 260px;
+height: 100px;
+margin-left: 23%;
+}
 }
